# amd64_elf

./: #prefixes.h#  .gitignore  CMakeLists.txt  README.txt
.ccls-cache/@@home@mwassink@intel64xELF/: @usr@include@alloca.h.blob  @usr@include@assert.h.blob  @usr@include@bits@byteswap.h.blob  @usr@include@bits@endian.h.blob  @usr@include@bits@endianness.h.blob  @usr@include@bits@floatn-common.h.blob  @usr@include@bits@floatn.h.blob  @usr@include@bits@libc-header-start.h.blob  @usr@include@bits@long-double.h.blob  @usr@include@bits@pthreadtypes-arch.h.blob  @usr@include@bits@pthreadtypes.h.blob  @usr@include@bits@select.h.blob  @usr@include@bits@stdint-intn.h.blob  @usr@include@bits@stdio_lim.h.blob  (+40 more)
builds/: .ninja_deps  .ninja_log  CMakeCache.txt  TestCharInstructions  TestGetInstructions  build.ninja  cmake_install.cmake  intel64.cbp  rules.ninja
elf/: Makefile  elf.c  elf.h  testendianness  testendianness.c  testread
elf/src/: elf.c  (+3 more)
opcodes/: Makefile  old_build.bat  tokens.files
test_files/: another  another_test_program.c  another_test_program.i  another_test_program.s  example_program.s  mark  mark.s  new_test  new_test.s  new_test.s~  struct_to_assembly  struct_to_assembly.c  struct_to_assembly.c~  struct_to_assembly.i  struct_to_assembly.s  test  test.c  test.s
tokens+dependencies/: CMakeLists.txt  CMakeLists.txt~  Makefile  TestCharInstructions.c  TestGetInstructions.c  build.bat  converted_instructions.txt  get_instructions.c  get_text_tokens.c  get_text_tokens.c~  get_tokens.c  test4.s  tokens.sln  tokens.vcxproj  tokens.vcxproj.filters  utilities.s
(+126 files in other folders)
